v 1.1.1.1
Census UI cleanup
Census kittens will be now automatically sort by their experience

v 1.1.1.0
Superconductors
Photovoltaic Cells

v 1.1.0.1

Changes by coderpatsy:

Show time for resources on Religion tooltips
Fix display issues with exactly 10 of a tunable building
Filter meteors' +science messages too
Equal chance of warm and cold seasons
Update BLS in tradeMultiple() like it does in trade() (better safe than sorry)
Fixed armor/armour inconsistency
Added tags to hunt and trade messages, so scripters can easily add filters for them
____

Village tab will display kittens in free/total format
Base yeld of hunters was very slightly increased
Hunt button will now display ETA

Unlock Ratio for mines was reduced from 30% to 15%
Unlock Ratio for ziggurats was reduced from 5% to 1%
Save button will now display a confirmation message

Pawse button will now have a description tooltip for confused players
Brewery was renamed to Catnip Processing
Metal Working and Mining prices were rebalanced

v 1.1.0.0 (beta)
Mechanics:
	Staging
	Energy

Techs:
	Ecology

Buildings:
	Solar Farms

Slightly reduced price of Combustion tech

v 1.0.9.2

Fixed incorrect space structures production tooltips
Research Vessel starcharts production will now proc from Orbital Arrays
Fixed Void Order effect being reduced to 25% if player have alicorns

Pause/Unpause was renamed to Pawse/Unpawse

v 1.0.9.1

Changes by mtncat:

Numerous fixes in the calendar logic
____

Resetting with Chronospheres will disable IW
UU bonus to aliconrs was reduced from 0.1% to 0.05%
UU price ratio was increased from 1.15 to 1.18

Research Vessel will now cost more oil and less starchartgs
Research Vessel will now give a minor bonus to starchart production

Orbital Arrays

v 1.0.9.0
Changes by mtncat:

Fixed incorrect food advisor message logic
__
Unicorn Utopia
Dark Energy
Fixed zebra catpower bonus being incorrectly calculated with >1 zebras
